--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-    "name": "vigi-13-nodejs",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "dependencies": {
-        "express": "^4.18.1"
-    },
-    "devDependencies": {
-        "eslint": "^8.15.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.26.0"
-    }
+  "name": "vigi-13-nodejs",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TK2400/nodes.js-su-AS.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TK2400/nodes.js-su-AS/issues"
+  },
+  "homepage": "https://github.com/TK2400/nodes.js-su-AS#readme",
+  "description": ""
 }
