--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "nodemon index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
   },
